--- a/index.html
+++ b/index.html
@@ -1,67 +1,134 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>DVR Converter V2</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DVR Time Converter</title>
+  <link rel="manifest" href="manifest.json" />
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    label { display: block; margin-top: 10px; }
-    input { margin-bottom: 10px; padding: 5px; width: 250px; }
-    button { padding: 10px 15px; font-size: 16px; cursor: pointer; }
-    .result { margin-top: 20px; font-weight: bold; font-size: 18px; }
+    body {
+      font-family: Optima;
+      background-color: #f4f7fb;
+      color: #1a1a1a;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .card {
+      background: #ffffff;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      max-width: 400px;
+      width: 100%;
+    }
+    h1 {
+      text-align: center;
+      color: #003366;
+      font-size: 2rem;
+    }
+    label {
+      display: block;
+      margin-top: 1rem;
+      font-weight: bold;
+      color: #003366;
+    }
+    input {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 0.25rem;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    button {
+      margin-top: 1.5rem;
+      width: 100%;
+      padding: 0.75rem;
+      background-color: #003366;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 1.5rem;
+      cursor: pointer;
+      font: Papyrus;
+    }
+    button:hover {
+      background-color: #0055a5;
+    }
+    .result {
+      margin-top: 1.5rem;
+      padding: 1rem;
+      background-color: #e6f0ff;
+      border-left: 4px solid #003366;
+      border-radius: 6px;
+      font-weight: bold;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
-  <h1>DVR Time and Date Converter</h1>
+  <div class="card">
+    <h1>DVR Time Converter</h1>
+    <label for="realNowDate">Current Real Date</label>
+    <input type="date" id="realNowDate" />
 
-  <label for="currentDate">Current Date (YYYY-MM-DD):</label>
-  <input type="date" id="currentDate">
+    <label for="realNow">Current Real Time</label>
+    <input type="time" id="realNow" />
 
-  <label for="currentTime">Current Time (HH:MM):</label>
-  <input type="time" id="currentTime">
+    <label for="dvrNowDate">Current DVR Date</label>
+    <input type="date" id="dvrNowDate" />
 
-  <label for="dvrDate">DVR Date (YYYY-MM-DD):</label>
-  <input type="date" id="dvrDate">
+    <label for="dvrNow">Current DVR Time</label>
+    <input type="time" id="dvrNow" />
 
-  <label for="dvrTime">DVR Time (HH:MM):</label>
-  <input type="time" id="dvrTime">
+    <label for="realPastDate">Incident Real Date</label>
+    <input type="date" id="realPastDate" />
 
-  <label for="desiredRealTime">Desired Real Time to View (HH:MM):</label>
-  <input type="time" id="desiredRealTime">
+    <label for="realPast">Incident Real Time</label>
+    <input type="time" id="realPast" />
 
-  <button onclick="convertTime()">Convert</button>
+    <button onclick="convertTime()">Convert</button>
 
-  <div class="result" id="result"></div>
+    <div id="result" class="result" style="display:none;"></div>
+  </div>
 
   <script>
     function convertTime() {
-      const currentDateStr = document.getElementById('currentDate').value;
-      const currentTimeStr = document.getElementById('currentTime').value;
-      const dvrDateStr = document.getElementById('dvrDate').value;
-      const dvrTimeStr = document.getElementById('dvrTime').value;
-      const desiredTimeStr = document.getElementById('desiredRealTime').value;
+      const realNowDate = document.getElementById("realNowDate").value;
+      const realNow = document.getElementById("realNow").value;
+      const dvrNowDate = document.getElementById("dvrNowDate").value;
+      const dvrNow = document.getElementById("dvrNow").value;
+      const realPastDate = document.getElementById("realPastDate").value;
+      const realPast = document.getElementById("realPast").value;
 
-      if (!currentDateStr || !currentTimeStr || !dvrDateStr || !dvrTimeStr || !desiredTimeStr) {
-        document.getElementById('result').innerText = "Please fill out all fields.";
+      if (!realNowDate || !realNow || !dvrNowDate || !dvrNow || !realPastDate || !realPast) {
+        alert("Please fill in all fields.");
         return;
       }
 
-      const currentDateTime = new Date(currentDateStr + 'T' + currentTimeStr);
-      const dvrDateTime = new Date(dvrDateStr + 'T' + dvrTimeStr);
-      const desiredDateTime = new Date(currentDateStr + 'T' + desiredTimeStr);
+      // Parse current real and dvr datetimes
+      const realNowDT = new Date(realNowDate + "T" + realNow);
+      const dvrNowDT = new Date(dvrNowDate + "T" + dvrNow);
+      const realPastDT = new Date(realPastDate + "T" + realPast);
 
-      // Calculate offset
-      const offset = dvrDateTime.getTime() - currentDateTime.getTime();
+      // Offset in ms
+      const offset = dvrNowDT.getTime() - realNowDT.getTime();
 
-      // Apply offset
-      const convertedDateTime = new Date(desiredDateTime.getTime() + offset);
+      // Target dvr datetime
+      const dvrTargetDT = new Date(realPastDT.getTime() + offset);
 
-      const year = convertedDateTime.getFullYear();
-      const month = String(convertedDateTime.getMonth() + 1).padStart(2, '0');
-      const day = String(convertedDateTime.getDate()).padStart(2, '0');
-      const hours = String(convertedDateTime.getHours()).padStart(2, '0');
-      const minutes = String(convertedDateTime.getMinutes()).padStart(2, '0');
+      // Format for output
+      const year = dvrTargetDT.getFullYear();
+      const month = String(dvrTargetDT.getMonth() + 1).padStart(2, "0");
+      const day = String(dvrTargetDT.getDate()).padStart(2, "0");
+      const hours = String(dvrTargetDT.getHours()).padStart(2, "0");
+      const minutes = String(dvrTargetDT.getMinutes()).padStart(2, "0");
 
-      document.getElementById('result').innerText = `Look for: ${year}-${month}-${day} ${hours}:${minutes}`;
+      document.getElementById("result").style.display = "block";
+      document.getElementById("result").innerText =
+        `DVR Date & Time to Search: ${year}-${month}-${day} ${hours}:${minutes}`;
     }
   </script>
 </body>
