--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
 <body>
   <div class="card">
     <h1>DVR Time Converter</h1>
-    <label for="realNowDate">Current Real Date</label>
+    <label for="realNowDate">Real Date</label>
     <input type="date" id="realNowDate" />
 
-    <label for="realNow">Current Real Time</label>
+    <label for="realNow">Real Time</label>
     <input type="time" id="realNow" />
 
-    <label for="dvrNowDate">Current DVR Date</label>
+    <label for="dvrNowDate">DVR Date</label>
     <input type="date" id="dvrNowDate" />
 
-    <label for="dvrNow">Current DVR Time</label>
+    <label for="dvrNow">DVR Time</label>
     <input type="time" id="dvrNow" />
 
-    <label for="realPastDate">Incident Real Date</label>
+    <label for="realPastDate">Incident Date</label>
     <input type="date" id="realPastDate" />
 
-    <label for="realPast">Incident Real Time</label>
+    <label for="realPast">Incident Time</label>
     <input type="time" id="realPast" />
 
     <button onclick="convertTime()">Convert</button>
